# NS3-scratch

./: 1.2createNodes.cc  1.3P2PSimple.cc  1.5trace-example.cc  1.5trace.cc  2.4mesh-network.cc  CMakeLists.txt  README.md  analysiseGossip.py  betterDataHandler.py  calculate_neighbors.py  dataHandler.py  final.txt  gossip.cc  gossip_netowrk.py  mixed-mobility.cc  node_placement.py  placement copy.json  placement_100_33.json  placement_100_44.json  placement_10_32.json  placement_50_2.json  placement_50_24.json  placement_50_32.json  placement_50_49.json  placement_50_92.json  placement_50_idk.json  run_gossip_tests.sh  simulation.cc  simulation2.cc  simulationWifi.cc  simulation_description.md  tester.cc
exercises/part1/: 1.1helloNS3.cc  1.4udp-echo.cc
exercises/part2/: 2.1wifiBasic.cc  2.2wifi-ap.cc  2.3custom-app.cc
